--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,9 +1,18 @@
 <p>products works!</p>
 <table>
     <thead>
-        
+        <tr>
+            <th>Termék név</th>
+            <th>Ár</th>
+            <th>Értékelés</th>
+            <th>Készlet</th>
+        </tr>
     </thead>
     <tbody>
-
+        <tr *ngFor="let product of products"></tr>
+        <td>{{ product.title }}</td>
+        <td>{{ product.price }}ft</td>
+        <td>{{ product.rating }}</td>
+        <td>{{ product.stock }}</td>
     </tbody>
 </table>
